# fastapi-ground-backend

./: Makefile  pyproject.toml  test.html
app/: constants.py  main.py  telemetry.py
app/api/: command_routes.py  event_routes.py  participant_routes.py  room_routes.py  telemetry_routes.py
app/core/: command_handler.py  participant.py  room.py  satellite_state.py  simulator.py
app/models/: command.py  event.py  participant.py  room.py  telemetry.py
app/realtime/: connection_manager.py  websocket_routes.py
app/services/: command_service.py  event_service.py  room_service.py  telemetry_service.py
app/storage/: memory_store.py
mission_telemetry_backend.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_room.py
